--- a/front/ChatBot/src/app/questions/main-questions/main-questions.component.sass
+++ b/front/ChatBot/src/app/questions/main-questions/main-questions.component.sass
@@ -33,7 +33,8 @@
 .main-questions-block.elements
   display: flex
   flex-wrap: wrap
-  height: 297px
+  height: 100%
+  max-height: 450px
   overflow: overlay
   -webkit-overflow-scrolling: overlay
 
