--- a/front/ChatBot/src/app/base-chat-header/base-chat-header.component.sass
+++ b/front/ChatBot/src/app/base-chat-header/base-chat-header.component.sass
@@ -4,7 +4,7 @@
 .base-chat-header
   position: relative
   width: 100%
-  height: $baseHeader
+  height: $baseHeaderHeight
   background-color: #3757A1
   border-radius: 1px
   display: flex
