--- a/front/ChatBot/src/app/operator-message/operator-message.component.html
+++ b/front/ChatBot/src/app/operator-message/operator-message.component.html
@@ -10,7 +10,7 @@
 
 <div class="operator-message question-message" *ngIf="message.type == messageType.Question" (click)="showQuestion()">
   <div class="msg-left question-left">
-    <div>{{message.content}}</div>
+    <div class="question-content">{{message.content}}</div>
   </div>
   <div class="right-block"></div>
 </div>
