--- a/front/ChatBot/src/app/operator-message/operator-message.component.sass
+++ b/front/ChatBot/src/app/operator-message/operator-message.component.sass
@@ -29,7 +29,20 @@
   cursor: pointer
 
 .msg-left.question-left
+  width: 327px
+  height: 45px
+  background-color: #F7F8FA
+  border: 1px solid #DADEE5
+  box-sizing: border-box
+  border-radius: 5px 5px 0px 5px
+  display: flex
+  justify-content: center
+  align-items: center
+
+.question-content
+  @include common.font-roboto(14px, 140%)
   color: #3757A1
+  text-align: center
 
 .operator-message.button-message
   flex-direction: row-reverse
