--- a/front/ChatBot/src/common/styles/variables.sass
+++ b/front/ChatBot/src/common/styles/variables.sass
@@ -6,7 +6,7 @@ $pi: 3.14
 $parentChatBotHeight: 630px
 $parentChatBotWidth: 560px
 
-$baseHeader: 71px
+$baseHeaderHeight: 71px
 $chatEditorMinHeight: 50px
 $chatEditorMaxHeight: 100px
-$msgContentMaxHeight: $parentChatBotHeight - $baseHeader - $chatEditorMinHeight
+$msgContentMaxHeight: $parentChatBotHeight - $baseHeaderHeight - $chatEditorMinHeight
