--- a/front/ChatBot/src/app/auth-form/auth-form.component.sass
+++ b/front/ChatBot/src/app/auth-form/auth-form.component.sass
@@ -1,4 +1,13 @@
 @use "src/common/styles/common"
+@import ../../common/styles/variables
+
+@media screen and (max-width: $parentChatBotWidth - 1px)
+  .form-submit
+    width: 60%
+
+@media screen and (min-width: $parentChatBotWidth)
+  .form-submit
+    width: 40%
 
 .form-container
   padding: 2em
@@ -33,7 +42,6 @@
   //@include common.font-roboto(15px, 160%)
 
 .form-submit
-  width: 40%
   height: 40px
   background: linear-gradient(0deg, #3757A1, #3757A1), linear-gradient(180deg, #FFFFFF 0%, #FAFBFF 100%)
   border-radius: 5px
