--- a/front/ChatBot/src/app/msg-content/msg-content.component.sass
+++ b/front/ChatBot/src/app/msg-content/msg-content.component.sass
@@ -1,9 +1,16 @@
 @import ../../common/styles/variables
 
+@media screen and (max-width: $parentChatBotWidth - 1px)
+  .msg-content-outer
+    max-height: calc(100vh - #{$baseHeaderHeight})
+
+@media screen and (min-width: $parentChatBotWidth)
+  .msg-content-outer
+    max-height: $msgContentMaxHeight - 8px
+
 .msg-content-outer
   width: 100%
   height: 100%
-  max-height: $msgContentMaxHeight - 8px
 
 .msg-content
   width: 94%
