--- a/front/ChatBot/src/app/questions/questions/questions.component.sass
+++ b/front/ChatBot/src/app/questions/questions/questions.component.sass
@@ -1,7 +1,15 @@
 @use "src/common/styles/common"
+@import ../../../common/styles/variables
+
+@media screen and (max-width: $parentChatBotWidth - 1px)
+  .main-container
+    max-height: calc(100vh - #{$baseHeaderHeight} - #{$chatEditorMinHeight} - 1em)
+
+@media screen and (min-width: $parentChatBotWidth)
+  .main-container
+    max-height: calc(64vh - #{$baseHeaderHeight} - #{$chatEditorMinHeight} - 1em)
 
 .main-container
-  max-height: 350px
   overflow-y: auto
   scroll-behavior: smooth
 
@@ -12,8 +20,8 @@
 .questions-container
   width: 80%
   padding:
-    top: 5%
-    left: 5%
+    top: 1em
+    left: 1em
     right: 15%
   background-color: #F7F8FA
 
