--- a/front/ChatBot/src/app/questions/questions/questions.component.sass
+++ b/front/ChatBot/src/app/questions/questions/questions.component.sass
@@ -3,11 +3,11 @@
 
 @media screen and (max-width: $parentChatBotWidth - 1px)
   .main-container
-    max-height: calc(100vh - #{$baseHeaderHeight} - #{$chatEditorMinHeight} - 1em)
+    max-height: calc(95vh - #{$baseHeaderHeight} - #{$chatEditorMinHeight} - 1em)
 
 @media screen and (min-width: $parentChatBotWidth)
   .main-container
-    max-height: calc(64vh - #{$baseHeaderHeight} - #{$chatEditorMinHeight} - 1em)
+    max-height: calc(#{$parentChatBotHeight} - #{$baseHeaderHeight} - #{$chatEditorMinHeight} - 1em)
 
 .main-container
   overflow-y: auto
