--- a/lk/src/app/main/main.component.html
+++ b/lk/src/app/main/main.component.html
@@ -17,7 +17,7 @@
                 </mat-list-item>
                 <mat-list-item style="text-align: center" (click)="goto('questions')" *auth="'QuestionManager'">
                     <button mat-icon-button class="list-button">
-                        <mat-icon svgIcon="res-chat"></mat-icon>&nbsp;&nbsp;
+                        <mat-icon svgIcon="questions"></mat-icon>&nbsp;&nbsp;
                         <span class="side-nav-menu-caption">Вопросы</span>
                     </button>
                     <div class="arrow-container">
@@ -26,7 +26,7 @@
                 </mat-list-item>
                 <mat-list-item style="text-align: center" (click)="goto('operators')" *auth="'OperatorManager'">
                     <button mat-icon-button class="list-button">
-                        <mat-icon svgIcon="res-chat"></mat-icon>&nbsp;&nbsp;
+                        <mat-icon svgIcon="operators"></mat-icon>&nbsp;&nbsp;
                         <span class="side-nav-menu-caption">Операторы</span>
                     </button>
                     <div class="arrow-container">
