--- a/front/ChatBot/src/app/questions/first-questions/first-questions.component.sass
+++ b/front/ChatBot/src/app/questions/first-questions/first-questions.component.sass
@@ -1,17 +1,36 @@
 @use "src/common/styles/common"
 
+@media screen and (max-width: 413px)
+  .first-questions-element
+    width: 135px
+    height: 100px
+    margin:
+      left: 0.2em
+      right: 0.2em
+      bottom: 0.4em
+
+  .first-questions-text
+    @include common.font-roboto(14px, 130%)
+
+
+@media screen and (min-width: 414px)
+  .first-questions-element
+    width: 160px
+    height: 130px
+    margin:
+      left: 0.3em
+      right: 0.3em
+      bottom: 0.6em
+
+  .first-questions-text
+    @include common.font-roboto(15px, 140%)
+
 .first-questions-element
-  width: 160px
-  height: 130px
   background: linear-gradient(180deg, #FFFFFF 0%, #FAFBFF 100%)
   border: 1px solid #DADEE5
   box-sizing: border-box
   border-radius: 5px
   cursor: pointer
-  margin:
-    left: 0.3em
-    right: 0.3em
-    bottom: 0.6em
 
 .first-questions-element:hover
   box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.1)
@@ -22,6 +41,6 @@
   align-items: center
 
 .first-questions-text
-  width: 60%
-  @include common.font-roboto(15px, 140%)
+  width: 90%
   color: #3757A1
+  text-align: center
