--- a/front/ChatBot/src/app/questions/main-questions/main-questions.component.sass
+++ b/front/ChatBot/src/app/questions/main-questions/main-questions.component.sass
@@ -1,13 +1,32 @@
 @use "src/common/styles/common"
 
+@media screen and (max-width: 320px)
+  .main-questions-block.elements
+    max-height: 270px
+
+  .main-questions-block
+    padding: 0.5em
+
+@media screen and (min-width: 321px) and (max-width: 360px)
+  .main-questions-block.elements
+    max-height: 400px
+
+  .main-questions-block
+    padding: 1em
+
+@media screen and (min-width: 414px)
+  .main-questions-block.elements
+    max-height: 450px
+
+  .main-questions-block
+    padding: 1em
+
 .main-questions-container
   padding: 1em
 
 .main-questions-block
-  padding: 1em
   @include common.font-roboto(20px, 140%, 500)
   color: #333740
-
 
 .main-questions-block.search
   display: flex
@@ -34,7 +53,6 @@
   display: flex
   flex-wrap: wrap
   height: 100%
-  max-height: 450px
   overflow: overlay
   -webkit-overflow-scrolling: overlay
 
