--- a/lk/src/app/client-chat-dialog/client-chat-dialog.component.sass
+++ b/lk/src/app/client-chat-dialog/client-chat-dialog.component.sass
@@ -5,8 +5,8 @@
   height: 100%
   overflow-y: auto
   scroll-behavior: smooth
-  //background-color: #F7F8FA
-  background: url('../../assets/dialog_phone.jpg')
+  background-color: #F7F8FA
+  //background: url('../../assets/dialog_phone.jpg')
   background-size: 100% 100%
   box-shadow: inset 0 0 5px -2px #555
 
