--- a/lk/src/app/main/main.component.html
+++ b/lk/src/app/main/main.component.html
@@ -33,6 +33,15 @@
                         <mat-icon class="res-menu-active-icon" svgIcon="res-menu-active"></mat-icon>
                     </div>
                 </mat-list-item>
+                <mat-list-item style="text-align: center" (click)="goto('reports')" *auth="'ReportsPage'">
+                    <button mat-icon-button class="list-button">
+                        <mat-icon svgIcon="reports"></mat-icon>&nbsp;&nbsp;
+                        <span class="side-nav-menu-caption">Отчеты</span>
+                    </button>
+                    <div class="arrow-container">
+                        <mat-icon class="res-menu-active-icon" svgIcon="res-menu-active"></mat-icon>
+                    </div>
+                </mat-list-item>
             </mat-nav-list>
             <div class="side-bottom-container">
                 <div class="side-bottom-actions">
