Замечания по стилям

--- a/lk/src/app/dialog/client-message/client-message.component.sass
+++ b/lk/src/app/dialog/client-message/client-message.component.sass
@@ -8,7 +8,7 @@
 
 .message
   width: 80%
-  background-color: #FFFFFF
+  background-color: #EDF3FF
   //border: 1px solid #D5DDED
   box-sizing: border-box
   border-radius: 3px
