--- a/front/ChatBot/src/app/questions/main-questions/main-questions.component.sass
+++ b/front/ChatBot/src/app/questions/main-questions/main-questions.component.sass
@@ -1,5 +1,9 @@
 @use "src/common/styles/common"
 
+@media screen and (max-width: 360px) and (max-height: 511px)
+  .main-questions-block.elements
+    max-height: 145px
+
 @media screen and (max-width: 320px)
   .main-questions-block.elements
     max-height: 270px
@@ -9,7 +13,7 @@
 
 @media screen and (min-width: 321px) and (max-width: 360px)
   .main-questions-block.elements
-    max-height: 400px
+    max-height: 270px
 
   .main-questions-block
     padding: 1em
