--- a/front/ChatBot/src/app/msg-container/msg-container.component.sass
+++ b/front/ChatBot/src/app/msg-container/msg-container.component.sass
@@ -3,11 +3,25 @@
 @media screen and (max-width: $parentChatBotWidth - 1px)
   .parent-chatbot
     min-width: 100%
-    min-height: 100%
+    min-height: 100vh
     max-width: 100%
-    max-height: 100%
+    max-height: 100vh
     left: 0
     right: 0
+
+  .parent-chatbot.open
+    opacity: 1
+    bottom: 0
+    transition-property: opacity, bottom
+    transition-duration: 0.3s
+    transition-timing-function: cubic-bezier(0.35, 0, 0.25, 1)
+
+  .parent-chatbot.close
+    opacity: 0
+    bottom: -157%
+    transition-property: opacity, bottom
+    transition-duration: 0.5s
+    transition-timing-function: ease-out
 
 @media screen and (min-width: $parentChatBotWidth)
   .parent-chatbot
@@ -16,10 +30,55 @@
     min-height: $parentChatBotHeight
     max-height: $parentChatBotHeight
 
+  .parent-chatbot.open
+    opacity: 1
+    bottom: 70px
+    transition-property: opacity, bottom
+    transition-duration: 0.3s
+    transition-timing-function: cubic-bezier(0.35, 0, 0.25, 1)
+
+  .parent-chatbot.close
+    opacity: 0
+    bottom: -157%
+    transition-property: opacity, bottom
+    transition-duration: 0.5s
+    transition-timing-function: ease-out
+
+@media screen and (orientation: landscape)
+  .parent-chatbot
+    left: 0
+    right: 0
+    bottom: 0
+    max-width: 100%
+
+  .parent-chatbot.open
+    top: 0
+    opacity: 1
+    transition-property: opacity, bottom
+    transition-duration: 0.3s
+    transition-timing-function: cubic-bezier(0.35, 0, 0.25, 1)
+    position: absolute
+
+  .parent-chatbot.close
+    top: 100%
+    opacity: 0
+    bottom: -157%
+    transition-property: opacity, bottom
+    transition-duration: 0.5s
+    transition-timing-function: ease-out
+
+@media screen and (orientation: landscape) and (max-width: 511px)
+  .parent-chatbot
+    max-height: 654px
+    height: 654px
+
+@media screen and (orientation: portrait)
+  .parent-chatbot
+    right: 10px
+
 .parent-chatbot
   position: fixed
   bottom: -10px - $parentChatBotHeight
-  right: 10px
   background: #F7F8FA
   border: 1px solid #D3D6DE
   box-sizing: border-box
