Плавающие размеры для телефона

--- a/front/ChatBot/src/app/msg-container/msg-container.component.sass
+++ b/front/ChatBot/src/app/msg-container/msg-container.component.sass
@@ -3,9 +3,9 @@
 @media screen and (max-width: $parentChatBotWidth - 1px)
   .parent-chatbot
     min-width: 100%
-    min-height: 100vh
+    min-height: 100%
     max-width: 100%
-    max-height: 100vh
+    max-height: 100%
     left: 0
     right: 0
 
