--- a/front/ChatBot/src/app/chat-header/chat-header.component.html
+++ b/front/ChatBot/src/app/chat-header/chat-header.component.html
@@ -1,5 +1,5 @@
 <base-chat-header>
   <div>
-    <div class="company">{{caption | async}}</div>
+    <div class="company">{{caption | async}} {{bWidth}}x{{bHeight}}</div>
   </div>
 </base-chat-header>
